today grinding stream questions